Remove unused imports + some others